[tool.poetry]
name = "pymaps"
version = "0.1.0"
description = ""
authors = ["Lorenzo"]
license = "GPL 3.0"

[tool.poetry.dependencies]
setuptools= "57.5.0"
python = "3.8.5"
numpy = "^1.21.3"
matplotlib = "^3.4.3"
GDAL = "2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
